<resources>
    <string name="app_name">BACCalculator</string>
    <string name="bac_live">BAC LIVE</string>
    <string name="start">START</string>
    <string name="credits">CREDITS</string>
    <string name="disclaimer">Disclaimer: This app represents an estimation of what your blood alcohol content value truly is. It is intended for informational, educational and entertainment purposes only and cannot be used in a court of law. We do not take responsibility for decisions taken by the user based solely on the information given from this app. If you have been drinking please use a designated driver to arrive home safely.</string>
    <string name="profiles">PROFILES</string>
    <string name="prgmmr">Programmer</string>
    <string name="credit">CREDIT</string>
    <string name="daniel_rivera">Daniel Rivera</string>
    <string name="art">ART</string>
    <string name="artist_name">Freepik @ www.freepik.com</string>
    <string name="artist_name2">Flaticon @ www.flaticon.com</string>
    <string name="registration">REGISTRATION</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="add_drink">Add Drink</string>
    <string name="get_bac">Get BAC</string>
    <string name="delete">Delete</string>

    <string name="pref_key">viewKey</string>
    <string name="update">UPDATE</string>
    <string name="update_registration">UPDATE REGISTRATION</string>
    <string name="enter_drink_name">Enter Drink Name</string>
    <string name="add_photo">ADD PHOTO</string>
    <string name="enter_the_of_alcohol_in_the_drink">Enter the % of Alcohol in the Drink</string>
    <string name="enter_the_container_volume">Enter the Container Volume</string>
    <string name="camera_image">camera image</string>
    <string name="preference_title">View Preference</string>
    <string name="pref_summary">Select to display the drink list in either a list or grid format</string>
    <string name="app_name_label">BAC LIVE</string>
    <string name="bac_level">BAC LEVEL</string>
    <string name="bac_placeholder">0.000</string>
    <string name="alcohol_by_volume">Alcohol % by Volume:</string>
    <string name="number_of_ounces">Number of Ounces:</string>
    <string name="value">value</string>
    <string name="drinkname">DrinkName</string>
    <string name="todo">TODO</string>
    <string name="_0_000">0.000</string>
    <string name="textview">TextView</string>
    <string name="placeholder">placeholder</string>
    <string name="drink_list">Drink List</string>
    <string name="username">Username</string>


</resources>
